// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionList matches snapshot when there are list items 1`] = `
<Fragment>
  <FilterTextBox
    filterType={0}
    setFilteredList={[Function]}
  />
  <ResizableDetailsList
    columns={
      Array [
        Object {
          "key": "name",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.name",
        },
        Object {
          "key": "id",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.id",
        },
        Object {
          "key": "state",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.state",
        },
      ]
    }
    items={Array []}
    onRenderItemColumn={[Function]}
    selectionMode={0}
  />
</Fragment>
`;

exports[`SubscriptionList matches snapshot when there are no list items 1`] = `
<Fragment>
  <FilterTextBox
    filterType={0}
    setFilteredList={[Function]}
  />
  <ResizableDetailsList
    columns={
      Array [
        Object {
          "key": "name",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.name",
        },
        Object {
          "key": "id",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.id",
        },
        Object {
          "key": "state",
          "minWidth": 150,
          "name": "authentication.azureActiveDirectory.subscriptionList.columns.state",
        },
      ]
    }
    items={Array []}
    onRenderItemColumn={[Function]}
    selectionMode={0}
  />
  authentication.azureActiveDirectory.subscriptionList.noItemText
</Fragment>
`;
